Added error messages and fixed title error

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,13 @@
         </style>
     </head>
 <body>
+        {% with messages = get_flashed_messages() %}
+        <ul>
+            {% for message in messages %}
+                <li>{{message}}</li>
+            {% endfor %}
+        </ul>
+    {% endwith %}
 
     {% block content %}
     {% endblock %}
